pihole-ORIG/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: pihole
  namespace: pihole-test

spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`pihole-test.ucdialplans.com`) 
    kind: Rule
    services:
    - name: pihole-web
      port: 80

  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-default
      namespace: traefik
